# NDAI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  deploy_dev.yml  deploy_ui.yml
backend/: .dockerignore  .env.example  Dockerfile  app.py  cloudbuild.yaml  config.py  evaluate_clause.py  old_app.py  policyRules.json  policy_matcher.py  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/routes/: analyze.py  chat.py  documents.py  feedback.py  health.py
backend/app/services/: llm.py  policy_matcher.py  rejections_vectorstore.py  scoring.py  storage.py
ui/: .env.example  Dockerfile  pyproject.toml  streamlit_app.py
