[tool.poetry]
name = "ndai"
version = "0.1.0"
description = ""
authors = ["Ben Maheu <benjamin.maheu@student.ecp.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.13"
langchain-text-splitters = "^0.3.11"
pytesseract = "^0.3.13"
pillow = "^12.0.0"
pdf2image = "^1.17.0"
pymupdf = "^1.26.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
