[tool.poetry]
name = "ndai-ui"
version = "0.1.0"
description = ""
authors = ["Ben Maheu <benjamin.maheu@student.ecp.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dotenv = "^0.9.9"
streamlit = "^1.50.0"
pandas = "^2.3.3"
plotly = "^6.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
